--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,8 @@ services:
       - API_GATEWAY_PORT=4000
       - USER_SERVICE_GRPC_URL=user-service:50051 # Connect to user-service by its service name
       - MATCHING_SERVICE_GRPC_URL=matching-service:50052 # Added for future use by gateway
+      - CHAT_SERVICE_GRPC_URL=chat-service:50053 # For GetMessageHistory etc.
+      - CHAT_SERVICE_WS_URL=ws://chat-service:3001 # For frontend/client to connect to WS
       - KEYCLOAK_URL=http://keycloak:8080 # Connect to keycloak by its service name
       - KEYCLOAK_REALM=dating-app-realm
       - KEYCLOAK_CLIENT_ID=dating-app-gateway
@@ -64,6 +66,7 @@ services:
     depends_on:
       - user-service
       - matching-service # Added dependency
+      - chat-service # Added dependency
       - keycloak
     volumes:
       - ./api-gateway:/usr/src/app
@@ -87,6 +90,30 @@ services:
       - user-service
     volumes:
       - ./microservices/matching-service:/usr/src/app
+      - /usr/src/app/node_modules
+    networks:
+      - app-network
+
+  chat-service:
+    build:
+      context: ./microservices/chat-service
+      dockerfile: Dockerfile
+    container_name: dating-app-chat-service
+    ports:
+      - "3001:3001" # WebSocket port
+      - "50053:50053" # gRPC port
+    environment:
+      - MONGODB_URI=mongodb://mongodb:27017/dating_app_chat_db
+      - CHAT_SERVICE_WS_PORT=3001
+      - CHAT_SERVICE_GRPC_PORT=50053
+      # - USER_SERVICE_GRPC_URL=user-service:50051 # Uncomment if needed
+      # - MATCHING_SERVICE_GRPC_URL=matching-service:50052 # Uncomment if needed
+    depends_on:
+      - mongodb
+      # - user-service # Add if direct dependency for auth/user info emerges
+      # - matching-service # Add if direct dependency for match verification emerges
+    volumes:
+      - ./microservices/chat-service:/usr/src/app
       - /usr/src/app/node_modules
     networks:
       - app-network
