--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -20,6 +20,7 @@
     "apollo-server-express": "^3.13.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "google-proto-files": "^4.2.0",
     "graphql": "^16.8.1"
   }
 }
