--- a/microservices/notification-service/package.json
+++ b/microservices/notification-service/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "matching-service",
+  "name": "notification-service",
   "version": "1.0.0",
-  "description": "Matching service for the online dating app",
-  "main": "matchingService.js",
+  "description": "Notification service for the online dating app",
+  "main": "notificationService.js",
   "scripts": {
-    "start": "node matchingService.js",
+    "start": "node notificationService.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "microservice",
-    "matching",
+    "notification",
+    "grpc",
     "dating-app"
   ],
   "author": "",
@@ -18,7 +19,6 @@
     "@grpc/grpc-js": "^1.10.1",
     "@grpc/proto-loader": "^0.7.10",
     "dotenv": "^16.4.5",
-    "google-proto-files": "^4.2.0",
-    "mongoose": "^8.3.2"
+    "google-proto-files": "^4.2.0"
   }
 }
